--- a/PSPDFKit.Android/PSPDFKit.Android.csproj
+++ b/PSPDFKit.Android/PSPDFKit.Android.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Additions\CtorsWorkaround.cs" />
     <Compile Include="Additions\RedactionAnnotation.cs" />
     <Compile Include="Additions\BaseRectsAnnotation.cs" />
+    <Compile Include="Additions\InstantPdfActivity.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Additions\AboutAdditions.txt" />
@@ -67,47 +68,47 @@
     <TransformFile Include="Transforms\Metadata.xml" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedReferenceJar Include="Jars\annotations-13.0.jar" />
-    <EmbeddedReferenceJar Include="Jars\kotlin-stdlib-1.3.50.jar" />
-    <EmbeddedReferenceJar Include="Jars\kotlin-stdlib-common-1.3.50.jar" />
+    <!-- <EmbeddedReferenceJar Include="Jars\annotations-13.0.jar" /> -->
+    <!-- <EmbeddedReferenceJar Include="Jars\kotlin-stdlib-1.3.50.jar" /> -->
+    <!-- <EmbeddedReferenceJar Include="Jars\kotlin-stdlib-common-1.3.50.jar" /> -->
     <EmbeddedReferenceJar Include="Jars\rxandroid-2.1.0.jar" />
     <EmbeddedReferenceJar Include="Jars\rxjava-2.2.4.jar" />
     <EmbeddedReferenceJar Include="Jars\reactive-streams-1.0.2.jar" />
     <EmbeddedReferenceJar Include="Jars\relinker-1.3.1.jar" />
     <EmbeddedReferenceJar Include="Jars\yearclass-2.0.0.jar" />
-    <EmbeddedReferenceJar Include="Jars\okhttp-3.9.0.jar" />
-    <EmbeddedReferenceJar Include="Jars\logging-interceptor-3.9.0.jar" />
-    <EmbeddedReferenceJar Include="Jars\okio-1.13.0.jar" />
+    <!-- <EmbeddedReferenceJar Include="Jars\okhttp-3.9.0.jar" /> -->
+    <!-- <EmbeddedReferenceJar Include="Jars\logging-interceptor-3.9.0.jar" /> -->
+    <!-- <EmbeddedReferenceJar Include="Jars\okio-1.13.0.jar" /> -->
   </ItemGroup>
   <ItemGroup>
-    <LibraryProjectZip Include="Jars\pspdfkit-6.0.3.aar" />
+    <LibraryProjectZip Include="Jars\pspdfkit-6.1.0.aar" />
   </ItemGroup>
-  <ItemGroup>
+  <!-- <ItemGroup>
     <EmbeddedJar Include="Jars\YouTubeAndroidPlayerApi-1.2.2\libs\YouTubeAndroidPlayerApi.jar">
       <Link>Jars\YouTubeAndroidPlayerApi.jar</Link>
     </EmbeddedJar>
-  </ItemGroup>
+  </ItemGroup> -->
   <ItemGroup>
     <PackageReference Include="Xamarin.AndroidX.Migration">
-      <Version>1.0.0-preview06</Version>
+      <Version>1.0.0-rc1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.AndroidX.Legacy.Support.V4">
-      <Version>1.0.0-preview06</Version>
+      <Version>1.0.0-rc1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.AndroidX.AppCompat">
-      <Version>1.1.0-preview06</Version>
+      <Version>1.1.0-rc1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.AndroidX.RecyclerView">
-      <Version>1.0.0-preview06</Version>
+      <Version>1.1.0-rc1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.AndroidX.CardView">
-      <Version>1.0.0-preview06</Version>
+      <Version>1.0.0-rc1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.AndroidX.GridLayout">
-      <Version>1.0.0-preview06</Version>
+      <Version>1.0.0-rc1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.AndroidX.Palette">
-      <Version>1.0.0-preview06</Version>
+      <Version>1.0.0-rc1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Android.Support.v4">
       <Version>28.0.0.3</Version>
@@ -116,7 +117,22 @@
       <Version>1.1.0-preview06</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData">
-      <Version>2.1.0-preview06</Version>
+      <Version>2.1.0-rc1</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.AndroidX.MultiDex">
+      <Version>2.0.1-rc1</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.AndroidX.Browser">
+      <Version>1.0.0-rc1</Version>
+    </PackageReference>
+    <PackageReference Include="Square.OkHttp3">
+      <Version>4.2.2</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Kotlin.StdLib">
+      <Version>1.3.50.1</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.YouTube.Player.Android">
+      <Version>1.2.2</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
