--- a/samples/XamarinForms/Droid/XFSample.Droid.csproj
+++ b/samples/XamarinForms/Droid/XFSample.Droid.csproj
@@ -34,6 +34,7 @@
     <AndroidLinkMode>None</AndroidLinkMode>
     <AndroidSupportedAbis>arm64-v8a;armeabi-v7a;x86;x86_64</AndroidSupportedAbis>
     <AndroidEnableMultiDex>true</AndroidEnableMultiDex>
+    <AndroidR8ExtraArguments>--pg-conf "$(MSBuildProjectDirectory)\..\..\AndroidSample\AndroidSample\pspdfkit-proguard.cfg"</AndroidR8ExtraArguments>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -95,41 +96,58 @@
     </AndroidAsset>
   </ItemGroup>
   <ItemGroup>
+    <ProguardConfiguration Include="..\..\AndroidSample\AndroidSample\pspdfkit-proguard.cfg">
+      <Link>pspdfkit-proguard.cfg</Link>
+    </ProguardConfiguration>
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData">
-      <Version>2.1.0-preview06</Version>
+      <Version>2.1.0-rc1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.AndroidX.Migration">
-      <Version>1.0.0-preview06</Version>
+      <Version>1.0.0-rc1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.AndroidX.Legacy.Support.V4">
-      <Version>1.0.0-preview06</Version>
+      <Version>1.0.0-rc1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.AndroidX.AppCompat">
-      <Version>1.1.0-preview06</Version>
+      <Version>1.1.0-rc1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.AndroidX.RecyclerView">
-      <Version>1.0.0-preview06</Version>
+      <Version>1.1.0-rc1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.AndroidX.CardView">
-      <Version>1.0.0-preview06</Version>
+      <Version>1.0.0-rc1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.AndroidX.GridLayout">
-      <Version>1.0.0-preview06</Version>
+      <Version>1.0.0-rc1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Google.Android.Material">
       <Version>1.1.0-preview06</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.AndroidX.Palette">
-      <Version>1.0.0-preview06</Version>
+      <Version>1.0.0-rc1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Android.Support.v4">
       <Version>28.0.0.3</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms">
-      <Version>4.4.0.991265</Version>
+      <Version>4.4.0.991477</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.AndroidX.Browser">
-      <Version>1.1.0-preview06</Version>
+      <Version>1.0.0-rc1</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.AndroidX.MultiDex">
+      <Version>2.0.1-rc1</Version>
+    </PackageReference>
+    <PackageReference Include="Square.OkHttp3">
+      <Version>4.2.2</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Kotlin.StdLib">
+      <Version>1.3.50.1</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.YouTube.Player.Android">
+      <Version>1.2.2</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
