--- a/PSPDFKit.Android/PSPDFKit.Android.csproj
+++ b/PSPDFKit.Android/PSPDFKit.Android.csproj
@@ -71,9 +71,9 @@
     <!-- <EmbeddedReferenceJar Include="Jars\annotations-13.0.jar" /> -->
     <!-- <EmbeddedReferenceJar Include="Jars\kotlin-stdlib-1.3.50.jar" /> -->
     <!-- <EmbeddedReferenceJar Include="Jars\kotlin-stdlib-common-1.3.50.jar" /> -->
-    <EmbeddedReferenceJar Include="Jars\rxandroid-2.1.0.jar" />
-    <EmbeddedReferenceJar Include="Jars\rxjava-2.2.4.jar" />
-    <EmbeddedReferenceJar Include="Jars\reactive-streams-1.0.2.jar" />
+    <!-- <EmbeddedReferenceJar Include="Jars\rxandroid-2.1.0.jar" /> -->
+    <!-- <EmbeddedReferenceJar Include="Jars\rxjava-2.2.4.jar" /> -->
+    <!-- <EmbeddedReferenceJar Include="Jars\reactive-streams-1.0.2.jar" /> -->
     <EmbeddedReferenceJar Include="Jars\relinker-1.3.1.jar" />
     <EmbeddedReferenceJar Include="Jars\yearclass-2.0.0.jar" />
     <!-- <EmbeddedReferenceJar Include="Jars\okhttp-3.9.0.jar" /> -->
@@ -81,7 +81,7 @@
     <!-- <EmbeddedReferenceJar Include="Jars\okio-1.13.0.jar" /> -->
   </ItemGroup>
   <ItemGroup>
-    <LibraryProjectZip Include="Jars\pspdfkit-6.1.1.aar" />
+    <LibraryProjectZip Include="Jars\pspdfkit-6.2.0.aar" />
   </ItemGroup>
   <!-- <ItemGroup>
     <EmbeddedJar Include="Jars\YouTubeAndroidPlayerApi-1.2.2\libs\YouTubeAndroidPlayerApi.jar">
@@ -133,6 +133,12 @@
     </PackageReference>
     <PackageReference Include="Xamarin.YouTube.Player.Android">
       <Version>1.2.2</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Android.ReactiveX.RxAndroid">
+      <Version>2.1.1</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Android.ReactiveX.RxJava">
+      <Version>2.2.7</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
