--- a/samples/AndroidSample/AndroidSample/AndroidSample.csproj
+++ b/samples/AndroidSample/AndroidSample/AndroidSample.csproj
@@ -130,6 +130,12 @@
     <PackageReference Include="Xamarin.Kotlin.StdLib">
       <Version>1.3.50.1</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.Android.ReactiveX.RxAndroid">
+      <Version>2.1.1</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Android.ReactiveX.RxJava">
+      <Version>2.2.7</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.YouTube.Player.Android">
       <Version>1.2.2</Version>
     </PackageReference>
