--- a/samples/PSPDFCatalog/PSPDFCatalog.csproj
+++ b/samples/PSPDFCatalog/PSPDFCatalog.csproj
@@ -243,7 +243,7 @@
       <Version>1.0.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms">
-      <Version>4.4.0.991640</Version>
+      <Version>4.5.0.356</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Android.Support.v4">
       <Version>28.0.0.3</Version>
@@ -295,6 +295,12 @@
     </PackageReference>
     <PackageReference Include="Xamarin.Kotlin.StdLib">
       <Version>1.3.50.1</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Android.ReactiveX.RxAndroid">
+      <Version>2.1.1</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Android.ReactiveX.RxJava">
+      <Version>2.2.7</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.YouTube.Player.Android">
       <Version>1.2.2</Version>
