--- a/samples/XamarinForms/Droid/XFSample.Droid.csproj
+++ b/samples/XamarinForms/Droid/XFSample.Droid.csproj
@@ -101,21 +101,22 @@
     </ProguardConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.AndroidX.Legacy.Support.V4" Version="1.0.0" />
-    <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.1.0" />
-    <PackageReference Include="Xamarin.AndroidX.RecyclerView" Version="1.1.0" />
-    <PackageReference Include="Xamarin.AndroidX.CardView" Version="1.0.0" />
-    <PackageReference Include="Xamarin.AndroidX.GridLayout" Version="1.0.0" />
-    <PackageReference Include="Xamarin.AndroidX.Palette" Version="1.0.0" />
-    <PackageReference Include="Xamarin.Google.Android.Material" Version="1.1.0-rc3" />
-    <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData" Version="2.2.0" />
-    <PackageReference Include="Xamarin.AndroidX.MultiDex" Version="2.0.1" />
-    <PackageReference Include="Xamarin.AndroidX.Browser" Version="1.2.0" />
+    <PackageReference Include="Xamarin.AndroidX.Legacy.Support.V4" Version="1.0.0.1" />
+    <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.1.0.1" />
+    <PackageReference Include="Xamarin.AndroidX.AppCompat.Resources" Version="1.1.0.1" />
+    <PackageReference Include="Xamarin.AndroidX.RecyclerView" Version="1.1.0.1" />
+    <PackageReference Include="Xamarin.AndroidX.CardView" Version="1.0.0.1" />
+    <PackageReference Include="Xamarin.AndroidX.GridLayout" Version="1.0.0.1" />
+    <PackageReference Include="Xamarin.AndroidX.Palette" Version="1.0.0.1" />
+    <PackageReference Include="Xamarin.Google.Android.Material" Version="1.1.0.1-rc3" />
+    <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData" Version="2.2.0.1" />
+    <PackageReference Include="Xamarin.AndroidX.MultiDex" Version="2.0.1.1" />
+    <PackageReference Include="Xamarin.AndroidX.Browser" Version="1.2.0.1" />
     <PackageReference Include="Square.OkHttp3" Version="4.2.2" />
     <PackageReference Include="Xamarin.Kotlin.StdLib" Version="1.3.50.1" />
     <PackageReference Include="Xamarin.Android.ReactiveX.RxAndroid" Version="2.1.1" />
     <PackageReference Include="Xamarin.Android.ReactiveX.RxJava" Version="2.2.7" />
-    <PackageReference Include="Xamarin.Forms" Version="4.6.0.726" />
+    <PackageReference Include="Xamarin.Forms" Version="4.6.0.847" />
     <PackageReference Include="Plugin.CurrentActivity" Version="2.1.0.4" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
